# orp-cambotv1-eng-cpp

./: README.md  list_eng.txt
cad_parts/: cam_2-forward.stl  d22_aa8x12v_holder.stl  d22_cam_plate_100x160mm.stl  nikodembartnik-216-plate.stl  rupantar2002-147-MotorMountingBracket(right).stl  rupantar2002-148-MotorMountingBracket(left).stl
cpp/: CMakeLists.txt
cpp/src/: cam_test.cpp  joy_drivetest.cpp  joytest.cpp  main.cpp  motortest1.cpp
